Fixed a bug of not showing images for students

--- a/resources/assets/sass/components/base.scss
+++ b/resources/assets/sass/components/base.scss
@@ -43,7 +43,7 @@ footer {
   left: 0;
   right: 0;
   z-index: 10000;
-  opacity: 0.3;
+  opacity: 0.7;
 }
 
 #mainNav {
